--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
+<!DOCTIPE html>
 <html>
 	<head>
 		<title> CV Page </title>
+		<style>
+ 			H1 { 
+    			font-size: 120%; 
+    			font-family: Verdana, Arial, Helvetica, sans-serif; 
+    			color: #883366; 
+   			}
+  		</style>
 	</head>
 	<body>
 		<h1> About Me... </h1>
-		<p> Hey! I'm <strong> Ilya Sugako </strong> </p>
-		<p> Coding - is wery intrsting thing! </p>
+		<p style="font-size: 120%; font-family: monospace; color: green"> Hey! I'm <strong> Ilya Sugako </strong> </p>
+		<p><strong> My contacts: </strong> <br> 
+			
+		   	<ul>phone - 375(29) 269-0-158 </ul>
+		   	<ul>e-mail- ilyasugako87@gmail.com </ul>
+		   	<ul>link on GitHub - https://github.com/Tzeentche </ul>
+
+		<p> <strong> Summary: </strong> <br>
+			I have become interested in programming since I was 13 years old. Basically, I studied everything on my own. With the development of the Internet, many opportunities for learning programming have emerged. In any case, you need to write thousands of lines of code to get some idea of this process. I want to perfectly master JS and bring maximum benefit in minimum time.
+I am diligent, quickly trained, patient, tactful. Workability does not depend on the time of day. Stress resistant.
+		</p>
+
+
+
+		<p> Coding - is wery intresting thing! </p>
 		<p> Some text 3... </p>
 	</body>
 </html>
 
-<!-- 1. Имя, фамилия (реальные)
-
-
-2. Контакты (желательно несколько)
-
-
-3. Summary (цель, пожелания, раскрыть, что важно, что хочется и почему. 
-Некий вариант самопрезентации. Когда опыта минимум, джун продает свой потенциал, 
-свое желание и способность быстро учиться. Не занимать позицию, что он придет, 
-и все кинутся его учить. Но обратное – у джуна время все брать, отовсюду, всегда и т.д.).
-
-
-4. Skills (например: языки программирования, фреймворки, методологии, системы контроля версий, тулы...)
+<!--  4. Skills (например: языки программирования, фреймворки, методологии, системы контроля версий, тулы...)
 
 
 5. Примеры кода (по возможности СВЕЖИЕ)
