Add changes in INDEX.html and add file Picture1.jpg

--- a/index.html
+++ b/index.html
@@ -13,39 +13,66 @@
 	<body>
 		<h1> About Me... </h1>
 		<p style="font-size: 120%; font-family: monospace; color: green"> Hey! I'm <strong> Ilya Sugako </strong> </p>
-		<p><strong> My contacts: </strong> <br> 
+		<p><img src="Picture1.jpg" alt="There must be a photo"></p>
+		<h4> My contacts: </h4> 
 			
-		   	<ul>phone - 375(29) 269-0-158 </ul>
+		   	<ul>phone - 375 (29) 269-0-158 </ul>
 		   	<ul>e-mail- ilyasugako87@gmail.com </ul>
 		   	<ul>link on GitHub - https://github.com/Tzeentche </ul>
 
-		<p> <strong> Summary: </strong> <br>
-			I have become interested in programming since I was 13 years old. Basically, I studied everything on my own. With the development of the Internet, many opportunities for learning programming have emerged. In any case, you need to write thousands of lines of code to get some idea of this process. I want to perfectly master JS and bring maximum benefit in minimum time.
-I am diligent, quickly trained, patient, tactful. Workability does not depend on the time of day. Stress resistant.
-		</p>
+		<h4> Summary: </h4>
+			<p> I have become interested in IT-sphere I was 13 years old. Basically, I studied everything on my own. <br>
+			    With the development of the Internet, many opportunities for learning programming have emerged. <br>
+			    In any case, you need to write thousands of lines of code to get some idea of this process. <br>
+			    I want to perfectly master JS and bring maximum benefit in minimum time. <br>
+			    I am diligent, quickly trained, patient, tactful. Workability does not depend on the time of day. Stress resistant. <br>
+			</p> 
+		<h4> Skills: </h4>
+			<p> <i> Main stack </i>
+				<ol> 
+					<li><b> HTML:</b> Basic </li>
+					<li><b> CSS:</b> Basic </li>
+					<li><b> JS:</b> Basic </li>
+					<li><b> Git Bash:</b> Basic </li>
+					<li><b> Visual Studio Code:</b> Basic </li>
+					<li><b> NodeJS:</b> Basic </li>
+					<li><b> Json API:</b> Basic </li>
+				</ol>
+			    <i> Add stack </i>
+				<ol>
 
-
-
+					<li><b> MySQL:</b> Basic </li>
+					<li><b> Java:</b> Basic </li>
+					<li><b> IntelliJ IDEA:</b> Basic </li>
+					<li><b> Oracle VM Virtual Box:</b> Basic </li>
+					<li><b> Selenium IDE:</b> Basic </li>
+					<li><b> Trello:</b> Basic </li>
+					<li><b> JMetr:</b> Basic </li>
+					<li><b> Xenu:</b> Basic </li>
+				</ol>
+			</p>
+			<p>
+				<h4> Experience </h4>
+				Unfortunately, I haven't experience.
+			</p>
+			<p>
+				<h4> Education </h4>
+				Belorussian State Economic University - masters of Economy <br>
+				<h5> Courses: </h5>
+				Software testing (Belhard) <br>
+				JavaRush (online programming courses) <br>
+				RS School (online courses)
+			</p>
+			<p>
+				<h4> Knowledge of English </h4>
+				I received a diploma of Intermediate (B1) level in the spring 2017 (Streamline).	
+			</p>
 		<p> Coding - is wery intresting thing! </p>
-		<p> Some text 3... </p>
 	</body>
 </html>
 
-<!--  4. Skills (например: языки программирования, фреймворки, методологии, системы контроля версий, тулы...)
-
-
-5. Примеры кода (по возможности СВЕЖИЕ)
-
-
-6. Опыт (Junior-у имеет смысл указать весь опыт: тестовые задания, проекты с курсов,
-фрилансовые проекты – все, где он применял вышеупомянутые скилы. 
-Круто, если это будет со ссылками на код)
-
-
-7. Образование (в т.ч. курсы, семинары, лекции, онлайн-обучение)
-
-
-8. Уровень английского (тут стоит указать, какая именно практика была, как долго и т.д.)
+<!--  8. Уровень английского (тут стоит указать, какая именно практика была, 
+как долго и т.д.)
 
 
 -->
