Add styles to List

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     			font-family: Verdana, Arial, Helvetica, sans-serif; 
     			color: #883366; 
    			}
+			
+			li {color: blue
+			}
   		</style>
 	</head>
 	<body>
@@ -21,7 +24,7 @@
 		   	<ul>link on GitHub - https://github.com/Tzeentche </ul>
 
 		<h4> Summary: </h4>
-			<p> I have become interested in IT-sphere I was 13 years old. Basically, I studied everything on my own. <br>
+			<p style="color: green"> I have become interested in IT-sphere I was 13 years old. Basically, I studied everything on my own. <br>
 			    With the development of the Internet, many opportunities for learning programming have emerged. <br>
 			    In any case, you need to write thousands of lines of code to get some idea of this process. <br>
 			    I want to perfectly master JS and bring maximum benefit in minimum time. <br>
@@ -55,7 +58,7 @@
 				<h4> Experience </h4>
 				Unfortunately, I haven't experience.
 			</p>
-			<p>
+			<p style="color: green">
 				<h4> Education </h4>
 				Belorussian State Economic University - masters of Economy <br>
 				<h5> Courses: </h5>
@@ -71,8 +74,4 @@
 	</body>
 </html>
 
-<!--  8. Уровень английского (тут стоит указать, какая именно практика была, 
-как долго и т.д.)
-
-
--->
+<!--  -->
